# AI-Agent-Kira

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  review.py  setup.py
data/job_descriptions/: backend_engineer_cpp.txt
data/policies/: company_handbook.md  travel_policy.md
data/resumes/: sample_candidate.txt
src/: logger.py
src/agents/: base_agent.py  candidate_agent.py  cleanup_agent.py  faq_agent.py
src/pipeline/: hr_graph.py
src/retrieval/: policy_index.py
src/storage/: evaluation_store.py
src/tools/: file_reader.py
