[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-kira"
version = "0.1.0"
description = "Multi-agent HR system built with LangGraph and LangChain."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Manas Dhakad" }]
dependencies = [
    "pandas",
    "numpy",
    "langchain-groq",
    "langgraph",
    "python-dotenv",
    "pypdf",
    "python-docx",
]

[tool.setuptools.packages.find]
include = ["src*"]
exclude = ["data*", "logs*", "notebooks*", "tests*"]
